# EncryptedBackuper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: tests.yml
CI_tests/data/: example_filelist.txt
CI_tests/headers/: CompareFileHashes_test.h  FileListHandler_test.h  KeyEncryptionTool_test.h  KeyFileHandler_test.h  RSA_test.h  SHA3_512_test.h  SHA3_test.h
CI_tests/src/: CompareFileHashes_test.cxx  FileListHandler_test.cxx  KeyEncryptionTool_test.cxx  KeyFileHandler_test.cxx  RSA_test.cxx  SHA3_512_test.cxx  SHA3_test.cxx  tests.cxx
EncryptedBackuper/: AESWrapper.h  BinaryDecryptor.h  BinaryEncryptor.h  BinaryFileFunctions.h  FileListHandler.h  KeyEncryptionTool.h  KeyFileHandler.h  RSA_related_math_functions.h  RandomNumberGenerator.h  SHA3Calculator.h  SHA3_512_Calculator.h  SHA3_message_parser.h  StringOperations.h
src/: AESWrapper.cxx  BinaryDecryptor.cxx  BinaryEncryptor.cxx  FileListHandler.cxx  KeyEncryptionTool.cxx  KeyFileHandler.cxx  RSA_related_math_functions.cxx  SHA3Calculator.cxx  SHA3_512_Calculator.cxx  SHA3_message_parser.cxx  StringOperations.cxx  main.cxx
utils/: AutomatedEncryptor.cxx  Decryptor.cxx  EncryptSeparateFilesInFolder.cxx  EncryptedBackuper.cxx  Encryptor.cxx  SystemServiceRunner.cxx  generate_key_file.cxx  main.cxx  tests.cxx
